# YukkuriTool

./: .gitignore  Cargo.toml  mecabrc
YukkuriToolQt/: CMakeLists.txt  RiamifyFFI.cpp  YukkuriToolQt_en_US.ts  YukkuriToolQt_ja_JP.ts  assets.qrc  lang.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
riamify/: Cargo.toml  riamify.h
riamify/src/: app.rs  dictionary.rs  ffi.rs  lib.rs  player.rs  presets.yml  settings.rs  settings.yml
riamify/src/app/: ffi.rs
riamify/src/yomi/: accent_rule.rs  mod.rs  test.rs
