[package]
name = "riamify"
version = "0.1.0"
authors = ["Hikaru Terazono (3c1u) <3c1u@vulpesgames.tokyo>"]
edition = "2018"

[lib]
name = "riamify"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mecab = { git = "https://github.com/3c1u/mecab-rs.git" }
unicode-jp = "0.3.0"
csv = "1.1.1"
serde_yaml = "0.8.11"
serde = { version = "1.0.103", features = ["derive"] }
encoding_rs = "0.8.20"
libloading = "0.5.2"
failure = "0.1.6"
url = "2.1.0"
rand = "0.7.2"
libsamplerate = "0.1.0"
hound = "3.4.0"
aho-corasick = "0.7.6"
chrono = "0.4.10"
